# TetrisGame

./: CMakeLists.txt  DrawableHUD.cpp  DrawableHUD.h  EventHandler.cpp  EventHandler.h  GameEngine.cpp  GameEngine.h  LICENSE  README.md  Readme.md  Vars.h  drawableTetromino.cpp  drawableTetromino.h  main.cpp  shapeStruct.h
dokumentacja/html/: _drawable_h_u_d_8h.html  _drawable_h_u_d_8h_source.html  _event_handler_8h.html  _event_handler_8h_source.html  _game_engine_8cpp.html  _game_engine_8h_source.html  _vars_8h.html  _vars_8h_source.html  annotated.html  class_event_handler-members.html  class_event_handler.html  class_game_engine-members.html  class_game_engine.html  classdrawable_h_u_d-members.html  classdrawable_h_u_d.html  classdrawable_tetromino-members.html  classdrawable_tetromino.html  classes.html  dir_5309e6a068b2ff089b39b4286796dc90.html  dir_de307b3305ee8185f81a6174c45acd70.html  drawable_h_u_d_8h_source.html  drawable_tetromino_8h.html  drawable_tetromino_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  menudata.js  shape_struct_8h.html  shape_struct_8h_source.html  struct_point-members.html  struct_point.html  struct_tetris_vars-members.html  struct_tetris_vars.html
dokumentacja/latex/: _drawable_h_u_d_8h.tex  _drawable_h_u_d_8h_source.tex  _event_handler_8h.tex  _event_handler_8h_source.tex  _game_engine_8cpp.tex  _game_engine_8h_source.tex  _vars_8h.tex  _vars_8h_source.tex  annotated.tex  class_event_handler.tex  class_game_engine.tex  (+12 more)
(+60 files in other folders)
